--- a/index.html
+++ b/index.html
@@ -29,15 +29,27 @@
   <section class="main">
     <div class="conteiner">
       <div class="join">
+        <h1> Join our community</h1>
+        <h3>30-day, halle-free money back guarantee</h3>
+        <p>Gain access to our full library of tutorials along with expert code reviews. <br>
+          Perfect for any devepolers who are serious about honing their skills.</p>
 
       </div>
 
       <div class="signup">
-
+        <h3>Monthly Subsciption</h3>
+        <p>$29 per month <br>Full access for less than 1$ a day</p>
+        <a href="#" class="sign-button"> Sign up</a>
       </div>
 
       <div class="why">
-
+        <h3>Why us</h3>
+        <p>Turotials by industry experts<br>
+          Peer &expert code reviews Conding exercices<br> Accees to our Github
+          repos<br>
+          Comunity forum<br>
+          Flashcards decks new<br>
+          Video every week</p>
       </div>
     </div>
   </section>
