Parte mobile dimensionada e textos fomatados.

--- a/index.html
+++ b/index.html
@@ -31,15 +31,20 @@
       <div class="join">
         <h1> Join our community</h1>
         <h3>30-day, halle-free money back guarantee</h3>
-        <p>Gain access to our full library of tutorials along with expert code reviews. <br>
-          Perfect for any devepolers who are serious about honing their skills.</p>
+        <p>Gain access to our full library of tutorials along with expert code reviews. </p>
+        <p>Perfect for any devepolers who are serious about honing their skills.</p>
 
       </div>
 
       <div class="signup">
         <h3>Monthly Subsciption</h3>
-        <p>$29 per month <br>Full access for less than 1$ a day</p>
-        <a href="#" class="sign-button"> Sign up</a>
+
+        <p class="price" style="line-height: 0;"> $29 per month </p>
+
+        <p style="line-height: 0;" class="less"> Full access for less than 1$ a day</p>
+        <p style="line-height: 80px;"> <a href="#" class="sign-button"> Sign up</a> </p>
+
+
       </div>
 
       <div class="why">
