--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
       <div class="signup">
         <h3>Monthly Subsciption</h3>
 
-        <p class="price" style="line-height: 0;"> $29 per month </p>
+        <div class="price" style="line-height: 0;"> $29 <div> per month</div>
+        </div>
+        </p>
 
         <p style="line-height: 0;" class="less"> Full access for less than 1$ a day</p>
         <p style="line-height: 80px;"> <a href="#" class="sign-button"> Sign up</a> </p>
