--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <div class="join">
         <h1> Join our community</h1>
         <h3>30-day, halle-free money back guarantee</h3>
-        <p>Gain access to our full library of tutorials along with expert code reviews. </p>
-        <p>Perfect for any devepolers who are serious about honing their skills.</p>
+        <p>Gain access to our full library along with expert code reviews.<br>Perfect for any devepolers who are serious
+          about honing their skills.</p>
 
       </div>
 
