add boas praticas

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
 </head>
 
 <body>
-  <section class="main">
+  <section role="main" class="main">
     <div class="conteiner">
       <div class="join">
         <h1> Join our community</h1>
-        <h3>30-day, halle-free money back guarantee</h3>
+        <h2>30-day, halle-free money back guarantee</h2>
         <p>Gain access to our full library along with expert code reviews.<br>Perfect for any devepolers who are serious
           about honing their skills.</p>
 
       </div>
 
       <div class="signup">
-        <h3>Monthly Subsciption</h3>
+        <h2>Monthly Subsciption</h2>
 
         <div class="price" style="line-height: 0;"> $29 <div> per month</div>
         </div>
@@ -50,7 +50,7 @@
       </div>
 
       <div class="why">
-        <h3>Why us</h3>
+        <h2>Why us</h2>
         <p>Turotials by industry experts<br>
           Peer &expert code reviews Conding exercices<br> Accees to our Github
           repos<br>
